[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tumbl"
version = "0.1.0"
description = "Self-hosted viewer for Tumblr blog backup exports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
